; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackGetDataEx.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackGetDataEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VALUE_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PackGetDataEx(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %4
  %14 = load i8*, i8** %7, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %13, %4
  store i32 0, i32* %5, align 4
  br label %34

17:                                               ; preds = %13
  %18 = load i32*, i32** %6, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load i32, i32* @VALUE_DATA, align 4
  %21 = call i32* @GetElement(i32* %18, i8* %19, i32 %20)
  store i32* %21, i32** %10, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  store i32 0, i32* %5, align 4
  br label %34

25:                                               ; preds = %17
  %26 = load i8*, i8** %8, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @GetDataValue(i32* %27, i32 %28)
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* %9, align 4
  %32 = call i32 @GetDataValueSize(i32* %30, i32 %31)
  %33 = call i32 @Copy(i8* %26, i32 %29, i32 %32)
  store i32 1, i32* %5, align 4
  br label %34

34:                                               ; preds = %25, %24, %16
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32* @GetElement(i32*, i8*, i32) #1

declare dso_local i32 @Copy(i8*, i32, i32) #1

declare dso_local i32 @GetDataValue(i32*, i32) #1

declare dso_local i32 @GetDataValueSize(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
